CHANGELOG
=========
+-----------------------+
| VERSION: 0.6.0RC3     |
+-----------------------+
BUGFIXES
05-05-06    Added missing en.js file that caused TinyFCK to fail on some platforms
            (Ed Lea)
05-05-06    CLI invocation fixed, see
            http://trac.seagullproject.org/wiki/Howto/WorkingWithCliOrHttpRequests
04-05-06    Fixed bug where array internal pointer was not set for module list,
            caused SectionMgr to fail to list modules
03-05-06    Fixed cmdline installer, envRebuild.php
01-05-06    Installer password was wiped doing a rebuild, now fixed (Julien Casanova)

IMPROVEMENTS
06-05-06    Implemented a library cache for all files used on every request,
            loaded file count back near 20
01-05-06    Install and rebuild process will now build the correct fk links file
            for DB_DataObject
01-05-06    You can now customise the location of the upload directory
30-04-06    HTML date widget cleanup
30-04-06    Module generator can now add additional managers per module
27-04-06    Wizard functionality reinstated (Steven Stremciuc)
26-04-06    Added ability to customise location of the modules directory
24-04-06    Modified RSS export to use custom filter chain
22-04-06    Japanese translation added (Dozo Yousan)

+-----------------------+
| VERSION: 0.6.0RC2     |
+-----------------------+
BUGFIXES
22-04-06    Fixed problem where selecting 'store langs in DB' during install, but
            then selecting none from list resulted in a fatal error (Heinrich Stoellinger)
21-04-06    DB_DataObject fails to overwrite an existing keys file with 'rebuild
            dataobjects', now file removal forces update
21-04-06    Postgres now works well, thanks to AJ and Sbaturzio for their help
21-04-06    Bug where DB_DataObjects wouldn't work correctly with MySQL5 or
            Postgres fixed, unique indexes removed from usr table
15-04-06    At long last, thanks to matt from IRC, Seagull will install properly